# claude_agents_sdk

./: .env.example  .gitignore  README.md  pyproject.toml
archive/legacy/: README.md
archive/legacy/docs/: basic_prompt_guard.md  basic_tool_guard.md  claude_agent_sdk_event_matrix.md  claude_hooks_monitor.md  claude_hooks_monitor_explained.html  claude_hooks_monitor_explained.md  claude_sdk_monitoring_notes.md  simple_keyword_hook_demo.md
archive/legacy/src/: basic_prompt_guard.py  basic_tool_guard.py  claude_hooks_monitor.py  example_run.py  hooks_monitor_example_run.py  simple_keyword_hook_demo.py
docs/: claude_aiceberg_hooks.md  claude_aiceberg_setup_guide.html
examples/: run_hooks.py
src/: __init__.py  claude_code_aiceberg_hook.py  claude_code_aiceberg_server.py  run_claude_aiceberg_hooks.py
src/claude_aiceberg/: __init__.py  cli.py  config.py  hooks.py  sender.py  workflow.py
src/claude_aiceberg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  helpers.py  test_claude_code_hook.py  test_packaging_cli.py  test_sdk_core.py
