[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-aiceberg"
version = "0.1.0"
description = "Claude Code and Claude Agent SDK observability hooks for Aiceberg."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk",
]

[project.scripts]
claude-aiceberg-hook = "claude_code_aiceberg_hook:cli_main"
claude-aiceberg-init = "claude_aiceberg.cli:init_main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["claude_code_aiceberg_hook"]

[tool.setuptools.packages.find]
where = ["src"]
